testsuite/tests/quotation/eval/non_value.compilers.reference
File "non_value.ml", line 11, characters 39-54:
11 | let eval : <[int64#]> expr -> int64# = [%eval: int64#]
                                            ^^^^^^^^^^^^^^^
Error: Only quotations with value-kinded types may be evaluated.
       The layout of int64# is bits64
         because it is the unboxed version of the primitive type int64.
       But the layout of int64# must be a sublayout of value
         because it's the result type of a quotation.
